# VulkanGuide

./: CMakeLists.txt
shaders/: colored_triangle.frag  colored_triangle.vert  triangle_mesh.vert  triangle_mesh.vert.spv
src/: main.cpp  vk_engine.cpp  vk_engine.h  vk_initializers.cpp  vk_initializers.h  vk_types.h
